--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "lodash": "^4.17.20",
+    "msw": "^0.29.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.17.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
