--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.21.0",
     "lodash": "^4.17.20",
     "msw": "^0.38.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-query": "^3.17.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "swr": "^1.2.2",
+    "victory": "^36.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
